syntax = "proto3";

package swarm;
option go_package = "./proto";

import "google/protobuf/empty.proto";

service NodeControl {
  rpc RegisterNode(NodeInfo) returns (RegisterResponse);
  rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message NodeInfo {
  string id = 1;
  int32 port = 2;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
}
